test/fail/actor-env-alias-no-did.mo
//MOC-FLAG --actor-env-alias alias MY_VAR nonexistent.did
import _Foo "canister:alias";
persistent actor {};
